# Buff-mini

./: .gitignore  LICENSE  README.md  launch_app.py  pyproject.toml  start_buffmini.bat  start_buffmini.sh
configs/: default.yaml  local_coinapi.yaml  stage36_enriched_full.yaml
docs/: baseline_status.json  baseline_status_post_merge.json  baseline_status_post_merge_report.md  buffmini_full_report.md  ci_repair_report.md  full_trace_report.md  full_trace_summary.json  master_execution_report.md  master_execution_summary.json  paper_trading_checklist.md  post_stage5_forensic_audit.md  prereq_finalize_report.md  prereq_finalize_summary.json  quick_start_one_click.md  readme_rewrite_report.md  readme_update_report_stage95_103.md  run_registry.json  stage0_5_cost_sensitivity.json  stage0_5_cost_sensitivity.md  stage0_6_cost_sensitivity.json  stage0_6_cost_sensitivity.md  stage0_cost_sensitivity.json  stage0_cost_sensitivity.md  stage100_report.md  stage100_summary.json  stage101_report.md  stage101_summary.json  stage102_report.md  stage102_summary.json  stage103_report.md  stage103_summary.json  stage10_6_report.md  stage10_6_report_summary.json  stage10_7_report.md  stage10_7_report_summary.json  stage10_report.md  stage10_report_summary.json  stage11_1_report.md  stage11_1_report_summary.json  stage11_4_1m_and_perf_report.md  (+415 more)
scripts/: __init__.py  audit_canonical_data.py  audit_data_coverage.py  audit_raw_data.py  audit_stage28_station.py  audit_stage3_1_mc.py  bench_engine.py  bench_engine_stage11_5.py  build_canonical_timeframes.py  build_contexts_unsupervised.py  build_ml_dataset.py  build_stage27_master_report.py  coinapi_key_doctor.py  coinapi_verify.py  emit_signals.py  estimate_stage12.py  export_pine.py  export_stage3_selector_to_docs.py  export_to_library.py  extract_embeddings.py  forensic_stage13_14_root_cause.py  monitor_drift.py  run_alpha_v2_pipeline.py  (+157 more)
(+670 files in other folders)
